# v4l2usbcam

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/v4l2usbcam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  v4l2_camera.cpp
app/src/main/java/com/example/v4l2usbcam/: CameraNative.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/v4l2usbcam/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
